@@ -1,1 +1,1 @@
-0.6
+0.6-cvs
